Change photo and update info

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/face_cropped.jpg" alt="">
+                    <img src="img\sathira.png" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -25,10 +25,13 @@
                     Hi, I'm <span>Sathira Liyanapathirana.</span>
                 </h1>
                 <p>
-                    Former Visiting Instrcutor and Final Year Computer Science and Engineering Undergraduate at University of Moratuwa, Sri Lanka. 
+                    Software Engineer at Sysco Labs
                     <br>
                     <br>
-                    Director of Membership Development Avenue at Rotaract Club of Alumni of the University of Moratuwa
+                    Vice President - Administration at Rotaract Club of Alumni of the University of Moratuwa
+                    <br>
+                    <br>
+                    Former Visiting Instrcutor and Fresh Computer Science and Engineering Graduate from University of Moratuwa, Sri Lanka. 
                     <br>
                     <br>
                     Former Software Engineering Intern at Mad Mobile (CAKE Engineering)
@@ -60,8 +63,8 @@
                 <div class="left-about">
                     <h4>Information About me</h4>
                     <p>
-                        Welcome to my portfolio! I am a final-year undergraduate student pursuing Computer Science and Engineering 
-                        at the University of Moratuwa, Sri Lanka. My academic journey began at Ananda College, Colombo 10, where I 
+                        Welcome to my portfolio! I am a Software Engineer and fresh graduate from Computer Science and Engineering department
+                        of University of Moratuwa, Sri Lanka. My academic journey began at Ananda College, Colombo 10, where I 
                         completed my primary and secondary schooling with outstanding achievements, securing 9As for O/Ls and 3As 
                         for A/Ls exams. Additionally, I earned the Cambridge Diploma of English in 2019. My commitment to education 
                         extends to my early years at Ananda College, where I engaged in an array of extracurricular activities. Notably, 
@@ -86,9 +89,6 @@
                         Thanks to hard work at university, the ability to learn fast, and strong motivation, I set very high 
                         standards for myself. In my spare time, I like to watch TV series and movies, play computer games and 
                         play the guitar. 
-                        <br>
-                        <br>
-                        Skills - Python | Java | PHP | CSS | JavaScript | HTML | SQL | Dart | Flutter | SpringBoot | Kotlin | Git | React | Node
                     </p>
                     <div class="btn-con">
                         <a href="other/Sathira-Liyanapathirana.pdf" class="main-btn" download="Sathira Liyanapathirana CV">
@@ -191,12 +191,25 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2023 August - 2023 December</p>
+                    <p class="tl-duration">2023 August - 2023 June</p>
                     <h5>Visiting Instrcutor<span> - Computer Science and Engineering, UoM</span></h5>
                     <p>
-                        I'm currently working as a visiting instructor in Computer Science and Engineering department, 
+                        Worked as a visiting instructor in Computer Science and Engineering department, 
                         University of Moratuwa for CS1033 Programming Fundamentals and CS2043 Operating Systems modules 
                         offered for undergraduates of Faculty of Engineering.
+                    </p>
+                </div>
+
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">2024 June - Present</p>
+                    <h5>Software Engineer<span> - Sysco Labs</span></h5>
+                    <p>
+                        ysco LABS is the captive innovation arm of Sysco Corporation, the world’s largest food service company and the 
+                        global leader in selling, marketing and distributing food products to restaurants, healthcare and educational 
+                        facilities, lodging establishments and other customers who prepare meals away from home.
                     </p>
                 </div>
             </div>
