--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Software Engineer at Sysco Labs
                     <br>
                     <br>
-                    Vice President - Administration at Rotaract Club of Alumni of the University of Moratuwa
+                    Former Vice President - Administration at Rotaract Club of Alumni of the University of Moratuwa
                     <br>
                     <br>
                     Former Visiting Instrcutor and Fresh Computer Science and Engineering Graduate from University of Moratuwa, Sri Lanka. 
@@ -219,7 +219,7 @@
                     <div class="progress-bar">
                         <p class="prog-title">Flutter / Dart</p>
                         <div class="progress-con">
-                            <p class="prog-text">80%</p>
+                            <p class="prog-text">50%</p>
                             <div class="progress">
                                 <span class="html"></span>
                             </div>
